--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "operatorsAliases": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "nem14xty2barsbwx",
+    "password": "y9m4dojxoivoyuby",
+    "database": "jdhus2e2ade9mekq",
+    "host": "lolyz0ok3stvj6f0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "operatorsAliases": false
   }
